{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 15,
  "lineage": "b2d8bc04-e06d-5237-979a-9f2e1bba5a93",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip-one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0492862559b55cb39",
            "arn": "arn:aws:ec2:us-east-2:226507396508:elastic-ip/eipalloc-0492862559b55cb39",
            "association_id": "eipassoc-0b5c69d39e883fb6d",
            "domain": "vpc",
            "id": "eipalloc-0492862559b55cb39",
            "instance": "i-02e0ce67d537e3a0b",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0247a3dde656b1e27",
            "private_dns": "ip-11-0-1-120.us-east-2.compute.internal",
            "private_ip": "11.0.1.120",
            "public_dns": "ec2-18-218-222-159.us-east-2.compute.amazonaws.com",
            "public_ip": "18.218.222.159",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Ansible-Terraform-EIP"
            },
            "tags_all": {
              "Name": "Ansible-Terraform-EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.app-server",
            "aws_network_interface.ansible-nic",
            "aws_security_group.web-pub-sg",
            "aws_subnet.public",
            "aws_vpc.ansiblevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-023c6ad2a87d58f18",
            "arn": "arn:aws:ec2:us-east-2:226507396508:instance/i-02e0ce67d537e3a0b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02e0ce67d537e3a0b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Shadowmankey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0247a3dde656b1e27"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0247a3dde656b1e27",
            "private_dns": "ip-11-0-1-120.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.1.120",
            "public_ip": "18.218.222.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09e2cd8f6b081c0e2",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06108756abc9f6518",
            "tags": {
              "Name": "rhel9app.shadowman.dev",
              "env": "dev",
              "operating_system": "RHEL9",
              "owner": "adworjan",
              "usage": "shadowmandemos"
            },
            "tags_all": {
              "Name": "rhel9app.shadowman.dev",
              "env": "dev",
              "operating_system": "RHEL9",
              "owner": "adworjan",
              "usage": "shadowmandemos"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06991679b616f1ca4"
            ]
          },
          "dependencies": [
            "aws_network_interface.ansible-nic",
            "aws_security_group.web-pub-sg",
            "aws_subnet.public",
            "aws_vpc.ansiblevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ansible-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:226507396508:internet-gateway/igw-023f915175c744ae8",
            "id": "igw-023f915175c744ae8",
            "owner_id": "226507396508",
            "tags": {
              "Name": "Ansible-Terraform-IG"
            },
            "tags_all": {
              "Name": "Ansible-Terraform-IG"
            },
            "vpc_id": "vpc-026326f996f8acd00"
          },
          "dependencies": [
            "aws_vpc.ansiblevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ansible-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:226507396508:network-interface/eni-0247a3dde656b1e27",
            "attachment": [
              {
                "attachment_id": "eni-attach-0ae3482916ce7d987",
                "device_index": 0,
                "instance": "i-02e0ce67d537e3a0b"
              }
            ],
            "id": "eni-0247a3dde656b1e27",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:29:09:12:39:ad",
            "owner_id": "226507396508",
            "private_ip": "11.0.1.120",
            "private_ip_list": [
              "11.0.1.120"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "11.0.1.120"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-06991679b616f1ca4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06108756abc9f6518",
            "tags": {
              "Name": "Ansible-Terraform-NI"
            },
            "tags_all": {
              "Name": "Ansible-Terraform-NI"
            }
          },
          "dependencies": [
            "aws_security_group.web-pub-sg",
            "aws_subnet.public",
            "aws_vpc.ansiblevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-023f915175c744ae8",
            "id": "r-rtb-033f879ad7b933c7a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-033f879ad7b933c7a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ansible-igw",
            "aws_route_table.ansible-rt",
            "aws_vpc.ansiblevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ansible-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:226507396508:route-table/rtb-033f879ad7b933c7a",
            "id": "rtb-033f879ad7b933c7a",
            "owner_id": "226507396508",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-023f915175c744ae8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Ansible-Terraform-RT"
            },
            "tags_all": {
              "Name": "Ansible-Terraform-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-026326f996f8acd00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ansiblevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0306d50094ff52c10",
            "route_table_id": "rtb-033f879ad7b933c7a",
            "subnet_id": "subnet-03f23e1e85a1c9da1"
          },
          "dependencies": [
            "aws_route_table.ansible-rt",
            "aws_subnet.private",
            "aws_vpc.ansiblevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03530dc0b0a236157",
            "route_table_id": "rtb-033f879ad7b933c7a",
            "subnet_id": "subnet-06108756abc9f6518"
          },
          "dependencies": [
            "aws_route_table.ansible-rt",
            "aws_subnet.public",
            "aws_vpc.ansiblevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-pub-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:226507396508:security-group/sg-06991679b616f1ca4",
            "description": "allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06991679b616f1ca4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "from my ip range",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Ansible_SG",
            "name_prefix": "",
            "owner_id": "226507396508",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Ansible-Terraform-SG"
            },
            "tags_all": {
              "Name": "Ansible-Terraform-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-026326f996f8acd00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ansiblevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:226507396508:subnet/subnet-03f23e1e85a1c9da1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "11.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f23e1e85a1c9da1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "226507396508",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Ansible-Terraform-Subnet-Private"
            },
            "tags_all": {
              "Name": "Ansible-Terraform-Subnet-Private"
            },
            "vpc_id": "vpc-026326f996f8acd00"
          },
          "dependencies": [
            "aws_vpc.ansiblevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:226507396508:subnet/subnet-06108756abc9f6518",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06108756abc9f6518",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "226507396508",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Ansible-Terraform-Subnet-Public"
            },
            "tags_all": {
              "Name": "Ansible-Terraform-Subnet-Public"
            },
            "vpc_id": "vpc-026326f996f8acd00"
          },
          "dependencies": [
            "aws_vpc.ansiblevpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ansiblevpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:226507396508:vpc/vpc-026326f996f8acd00",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-058b79075a856bcd9",
            "default_route_table_id": "rtb-027efdddc8ad25dc7",
            "default_security_group_id": "sg-00fce9ae23414986b",
            "dhcp_options_id": "dopt-0d6954945d04dd502",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-026326f996f8acd00",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-027efdddc8ad25dc7",
            "owner_id": "226507396508",
            "tags": {
              "Name": "Ansible-Terraform-VPC"
            },
            "tags_all": {
              "Name": "Ansible-Terraform-VPC"
            }
          }
        }
      ]
    }
  ]
}